ChangeLog for varconf

Tuesday, 6th August, 2002, Simon Goodall <simon@simongoodall.co.uk>
	* fixed varconf/config.cpp so parseStream now allows - and _ characters in a section name instead of throwing an exception.

Saturday, 20th June, 2002, Al Riddoch <alriddoch@zepler.org>
	* Add --enable-debug to configure.in
	* Use rpm supplied compiler flags in spec.
	* Increment version, and release

Saturday, 20th June, 2002, Michael Koch <konquerorgmx.de>
	* Depend on sigc++ >= 1.0.2
	* cleaned up Makefile.am

Monday, 10th June, 2002, Al Riddoch <alriddoch@zepler.org>
	* Fixed rpm spec into two different packages, and corrected generation
	  of interface version.

Wednesday, May 21 2002, Michael Koch (man-di)
	* tests/Makefile.am: make tests link
	
Wednesday, May 21 2002, Michael Koch (man-di)
	* Updated AUTHORS file
	* Made some text files more readable
	* removed generated file from CVS

Saturday, May 11 2002, Joel Schander (nullstar)
	* Added comments after member functions in Config.h.  Wasn't clear
	  on purpose of setParameterLookup() so didn't add anything.

Friday, March 19 2002, Martin Pollard

	* Fixed one of variable.cpp's operator<<'s  doesn't
	  seem to be in use right now anyway.
	
Friday, March 08 2002, James Turner

	* Added varconf-config and varconf.m4, plus configure
	  changes.
	* Bumped the version up
	* Set the .so version correctly, thanks to WFMath /
	  Ron Steinke for the help/
 	* Tweaked makefiles (using builddir when then they
	  should have been using srcdir) and .cpp files (using
	  < > includes when they should have been using "..").
	* make distcheck works cleanly.

Wednesday, Decemer 18, 2001 -- Al Riddoch <alriddoch@zepler.org>
  * C++ compliance fixes, for compiling under gcc v3.

Sunday, November 11, 2001 -- Ron Steinke <rsteinke@w-link.net>
  * variable.h, variable.cpp, dynbase.h: Added the capacity for
    Variable to hold an array of Variable (really vector<Variable>)
  * variable.h, variable.cpp: Added operator=(const char*),