@@ -30,7 +30,12 @@
 #include <map>
 #include <string>
 
-#include <sigc++/signal_system.h>
+#include <sigc++/object.h>
+#if SIGC_MAJOR_VERSION == 1 && SIGC_MINOR_VERSION == 0
+#include <sigc++/handle_system.h>
+#else
+#include <sigc++/signal.h>
+#endif
 #include <varconf/parse_error.h>
 #include <varconf/variable.h>
 
