@@ -1,5 +1,10 @@
 ChangeLog for varconf
 
+Saturday, 20th June, 2002, Al Riddoch <alriddoch@zepler.org>
+	* Integrated patch by Ron Steinke to remove dependancy on
+	  sigc++ 1.0.x internals. Modified configure script and includes
+	  to be compatable with sigc++ 1.2.
+
 Tuesday, 6th August, 2002, Simon Goodall <simon@simongoodall.co.uk>
 	* fixed varconf/config.cpp so parseStream now allows - and _ characters in a section name instead of throwing an exception.
 
